zeit.importer changes
=================

1.4.4 (unreleased)
------------------

- Nothing changed yet.


1.4.3 (2017-05-12)
------------------

- ZON-3350: Don't create image folders for articles with no image references


1.4.2 (2017-05-08)
------------------

- ZON-3350: Remove code to delete input folder after importing


1.4.1 (2017-05-03)
------------------

- ZON-3350: Minor improvments/bugfixes to k4 image processing


1.4.0 (2017-05-02)
------------------

- ZON-3737: Implement hashing to determine highres master images

- ZON-3890: Add license to image group


1.3.0 (2017-04-26)
------------------

- ZON-3350: Import preview images and image metadata


1.2.1 (2017-03-07)
------------------

- Typo: Correct attribute in XSLT


1.2.0 (2017-03-01)
------------------

- ZON-3735: Set access attribute from K4 import


1.1.1 (2017-02-28)
------------------

- BUG-666: Improve whitespace normalisation


1.1.0 (2017-02-14)
------------------

- ZON-3430: Process boxes of K4 import


1.0.1 (2017-01-31)
------------------

- ZON-3430: Normalize whitespace on k4 import


1.0.0 (2016-08-31)
------------------

- Use a configuration file

- ZON-3250: Load ressort map XML from DAV


0.2.6 (2015-10-21)
------------------

- HOTFIX: typo


0.2.5 (2015-10-20)
------------------

- ressorts can be configured as product ids


0.2.4 (2015-06-23)
------------------

- Revert setting ``channels`` (DEV-768).


0.2.3 (2014-09-03)
------------------

- Set ``channels`` to the ressort/subressort (VIV-469).


0.2.2 (2014-08-13)
------------------

- Restore date_first_released that was wrongly removed in 0.2.1.


0.2.1 (2014-07-17)
------------------

- Don't write publish timestamp into date_first_released, since that's
  semantically untrue (WEB-302).


0.2 (2014-05-23)
----------------

- Add processing of <Frames> from input XML
- Make k4import configurable from deployment
- repair tests


0.1 (2011-07-12)
----------------
